--- a/GitHubMvc/Web.config
+++ b/GitHubMvc/Web.config
@@ -20,8 +20,11 @@
     </httpModules>
     <pages>
       <namespaces>
-        <add namespace="MvcSiteMapProvider.Web.Html" />
-        <add namespace="MvcSiteMapProvider.Web.Html.Models" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Optimization" />
+        <add namespace="System.Web.Routing" />
       </namespaces>
     </pages>
   </system.web>
