--- a/GitHubMvc/GitHubMvc.csproj
+++ b/GitHubMvc/GitHubMvc.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StructureMapStartUp.cs" />
+    <Compile Include="Areas\Search\Models\UserProfileViewModel.cs" />
     <Compile Include="CustomAttributes\PageAttribute.cs" />
     <Compile Include="Areas\Search\SearchAreaRegistration.cs" />
     <Compile Include="Areas\Search\Controllers\SearchGitHubController.cs" />
@@ -181,7 +182,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Config.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -258,6 +258,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Areas\Search\Views\SearchGitHub\Search.cshtml" />
     <Content Include="Areas\Search\Views\SearchGitHub\Index.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\ProjectViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -273,6 +275,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GitHubApi\GitHubApi.csproj">
+      <Project>{fe8fa93b-6118-46fc-95a5-44c9ebe4bafc}</Project>
+      <Name>GitHubApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
