feat: added 404 response from github api

--- a/GitHubMvc/Web.config
+++ b/GitHubMvc/Web.config
@@ -9,10 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="GitHubUrl" value="https://api.github.com/users/robconery" />
+    <add key="GitHubUrl" value="https://api.github.com/users/robconery123456790" />
     <add key="UserAgents" value="BGL-Technicial-Test" />
     </appSettings>
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
