--- a/GitHubMvc/GitHubMvc.csproj
+++ b/GitHubMvc/GitHubMvc.csproj
@@ -260,6 +260,7 @@
     <Content Include="Areas\Search\Views\SearchGitHub\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ProjectViewModel.cshtml" />
+    <Content Include="Views\Shared\GitHub404Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
