--- a/GitHubApi/GitHubApi.csproj
+++ b/GitHubApi/GitHubApi.csproj
@@ -48,16 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomExceptions\ResourceNotFoundOnGitHubException.cs" />
     <Compile Include="GitHubApiRegistry.cs" />
-    <Compile Include="GitHubApiWrapper.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="IConfig.cs" />
-    <Compile Include="IGitHubApi.cs" />
+    <Compile Include="Api\GitHubApi.cs" />
+    <Compile Include="Configuration\Config.cs" />
+    <Compile Include="Configuration\IConfig.cs" />
+    <Compile Include="Api\IGitHubApi.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserProfile.cs" />
+    <Compile Include="Models\UserProfile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
