--- a/GitHubMvc/Web.config
+++ b/GitHubMvc/Web.config
@@ -13,7 +13,9 @@
     <add key="UserAgents" value="BGL-Technicial-Test" />
     </appSettings>
   <system.web>
-    <customErrors mode="Off" />
+
+    <customErrors mode="Off">
+    </customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
