--- a/GitHubMvc/Web.config
+++ b/GitHubMvc/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="GitHubUrl" value="https://api.github.com/users/robconery123456790" />
+    <add key="GitHubUrl" value="https://api.github.com" />
     <add key="UserAgents" value="BGL-Technicial-Test" />
     </appSettings>
   <system.web>
