--- a/GitHubMvc/GitHubMvc.csproj
+++ b/GitHubMvc/GitHubMvc.csproj
@@ -237,14 +237,13 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Areas\Search\Views\SearchGitHub\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\ProjectViewModel.cshtml" />
+    <Content Include="Areas\Search\Views\Shared\DisplayTemplates\ProjectViewModel.cshtml" />
     <Content Include="Views\Shared\GitHub404Error.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Search\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
